--- a/src/pages/SignupPage/SignupPage.css
+++ b/src/pages/SignupPage/SignupPage.css
@@ -3,7 +3,7 @@
     background-repeat: no-repeat;
     width: 100%;
     height: 100%;
-    background-size: 90%;
+    background-size: 100%;
     background-position: center;
 }
 
